<resources>
    <string name="app_name">Inventory</string>
    <string name="load">Load Excel File</string>
    <string name="Loading_button">Loading...</string>
    <string name="complete">Complete</string>
    <string name="variant_text">Варіанти підрахунку складу</string>
    <string name="full_calk">повний підрахунок</string>
    <string name="not_full">вибірковий підрахунок</string>
    <string name="button_start">Розпочати підрахунок</string>
</resources>