<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:gravity="center"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center|clip_vertical"
        android:text="@string/variant_text"
        android:textColor="@color/yellow"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="invisible"/>

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:visibility="invisible">

        <RadioButton
            android:id="@+id/full_warehouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:text="@string/full_calk"
            android:textColor="#C6FF00"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/custom_warehouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:minHeight="48dp"
            android:text="@string/not_full"
            android:textColor="#C6FF00"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/radio"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/Loading_button"
        android:minHeight="48dp"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/load"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_background"
        android:text="@string/load"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/load"
        android:layout_marginBottom="1dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_background"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/button_start"
        android:visibility="invisible"/>


</RelativeLayout>
